--- a/employee_register/templates/employee_register/employee_list.html
+++ b/employee_register/templates/employee_register/employee_list.html
@@ -1,5 +1,23 @@
 {% extends "employee_register/base.html" %}
 
 {% block content %}
-<p>list of employee from the table</p>
+<table class="table table-borderless">
+    <thead class="border-bottom font-weight-bold">
+        <tr>
+            <td>full name</td>
+            <td>mobile</td>
+            <td>position</td>
+        </tr>
+    </thead>
+    <tbody>
+        {% for employee in employee_list %}
+            <tr>
+                <td>{{employee.fullname}}</td>
+                <td>{{employee.mobile}}</td>
+                <td>{{employee.position}}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
 {% endblock content %}
